--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-
 :root {
     --brightOrange: hsl(31, 77%, 52%);
     --darkCyan: hsl(184, 100%, 22%);
@@ -13,32 +6,39 @@ html {
     --veryLightGray: hsl(0, 0%, 95%);
 }
 
-.container {
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 .wrapper {
+    align-items: center;
     display: flex;
-    height: 60%;
-    width: 800px;
+    justify-content: center;
+    height: 100vh;
 }
 
-.box1 {
+.wrapper__box {
+    display: flex;
+    width: 80rem;
+}
+
+.wrapper__box--1 {
     background-color: var(--brightOrange);
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 40px;
 }
 
-.box2 {
+.wrapper__box--2 {
     background-color: var(--darkCyan);
     padding: 40px;
 }
 
-.box3 {
+.wrapper__box--3 {
     background-color: var(--veryDarkCyan);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
