--- a/css/style.css
+++ b/css/style.css
@@ -28,45 +28,45 @@ html {
 
 .wrapper__box--1 {
     background-color: var(--brightOrange);
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    padding: 40px;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    padding: 4rem;
 }
 
 .wrapper__box--2 {
     background-color: var(--darkCyan);
-    padding: 40px;
+    padding: 4rem;
 }
 
 .wrapper__box--3 {
     background-color: var(--veryDarkCyan);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding: 40px;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    padding: 4rem;
 }
 
 h2 {
     color: var(--veryLightGray);
     font-family: 'Big Shoulders Display', cursive;
-    font-size: 35px;
+    font-size: 3.5rem;
     text-transform: uppercase;
 }
 
 p {
     color: var(--transparentWhite);
     font-family: 'Lexend Deca', sans-serif;
-    font-size: 13px;
-    line-height: 20px;
+    font-size: 1.3rem;
+    line-height: 2rem;
 }
 
 a {
     background-color: var(--veryLightGray);
-    border: 2px solid var(--veryLightGray);
-    border-radius: 26px;
+    border: .2rem solid var(--veryLightGray);
+    border-radius: 2.6rem;
     display: inline-block;
     font-family: 'Lexend Deca', sans-serif;
-    margin-top: 60px;
-    padding: 13px 27px;
+    margin-top: 6rem;
+    padding: 1.3rem 2.7rem;
     cursor: pointer;
     text-decoration: none;
     transition: all .4s ease-in-out;
@@ -98,17 +98,17 @@ a:hover {
 
 @media screen and (max-width: 768px) {
     .wrapper__box--1 {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+        border-top-left-radius: 1.5rem;
+        border-top-right-radius: 1.5rem;
         border-bottom-left-radius: 0;
     }
 }
 
 @media screen and (max-width: 768px) {
     .wrapper__box--3 {
-        border-bottom-right-radius: 15px;
-        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 1.5rem;
+        border-bottom-left-radius: 1.5rem;
         border-top-right-radius: 0;
-        margin-bottom: 20px;
+        margin-bottom: 2rem;
     }
 } 
